--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,14 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  Welcome to 99 Luftballons!
+  <hr>
 </head>
 <body>
+
+<% if !!flash[:notice] %>
+	<%= flash[:notice] %>
+<% end %>
 
 <%= yield %>
 
