Added rental requests

--- a/app/views/luftballons/index.html.erb
+++ b/app/views/luftballons/index.html.erb
@@ -5,3 +5,5 @@
 </ul>
 
 <%= link_to "Create a New Luftballon!", new_luftballon_url%>
+<br>
+<%= link_to "Reserve a Luftballon!", new_luftballon_rental_request_url%>
