--- a/app/views/luftballons/show.html.erb
+++ b/app/views/luftballons/show.html.erb
@@ -20,7 +20,13 @@
 Reservations:
 <ul>
 <% LuftballonRentalRequest.where("luftballon_id = ?", @luftballon.id).each do |reservation|%>
-<li><%= reservation.start_date %> ~ <%= reservation.end_date %> <%= reservation.status %></li>
+  <li>
+	  <%= reservation.start_date %> ~ <%= reservation.end_date %> <%= reservation.status %>
+	  <% if reservation.pending? %>
+	    <%= button_to "Approve", approve_luftballon_rental_request_url(reservation) %>
+	    <%= button_to "Deny", deny_luftballon_rental_request_url(reservation) %>
+	  <% end %>
+  </li>
 <% end %>
 </ul>
 
