--- a/app/views/luftballons/_form.html.erb
+++ b/app/views/luftballons/_form.html.erb
@@ -12,6 +12,11 @@
 <form action=<%=action%> method="post">
 	<input type="hidden" name="_method" value=<%=method%>>
 
+	<input
+	  type="hidden"
+	  name="authenticity_token"
+	  value="<%= form_authenticity_token %>">
+
 	<label for="luftballon_inscription">Inscription</label>
 	<input 
 	  type="text" 
