--- a/app/views/luftballon_rental_requests/new.html.erb
+++ b/app/views/luftballon_rental_requests/new.html.erb
@@ -8,6 +8,10 @@
 <% end %>
 
 <form action=<%=luftballon_rental_requests_url%> method="post">
+	<input
+	 type="hidden"
+	 name="authenticity_token"
+	 value="<%= form_authenticity_token %>">
 
 	<label for="luftballon">Luftballon</label>
 	<select
@@ -21,7 +25,7 @@
 	    </option>
 	  <% end %>
 	</select>
-
+	<br>
 
 	<label for="request_start_date">Start Date</label>
 	<input 
